# shopr

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  shopr.py  tsconfig.json
.github/workflows/: ci.yml
shopr/: __init__.py  elo.py  main.py  trello.py
src/: shopr.ts  trello.ts
src/__tests__/: item-utils.test.ts
tests/: __init__.py  test_main.py
