[project]
name = "shopr"
version = "1.0.0"
description = "Trello-based shopping list sorter"
authors = [
    {name = "Åsmund Grammeltvedt", email = "asmundg@big-oil.org"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shopr"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=shopr --cov-report=xml --cov-report=term-missing"
